
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:layout_alignParentLeft="true"
       android:layout_alignParentTop="true"
       android:orientation="vertical" >

       <EditText
           android:id="@+id/txtUsername"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:hint="@string/username" >

           <requestFocus />
       </EditText>

       <EditText
           android:id="@+id/txtPassword"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/password"
           android:inputType="textPassword" />

       <Button
           android:id="@+id/btnSave"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical|center_horizontal"
           android:text="@string/save_and_validate" />
   </LinearLayout>
